<resources>
    <string name="app_name">Word Quiz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_from_quiz">hello from quiz</string>
    <string name="enter_your_word">Enter your word</string>
    <string name="shuffle">Shuffle</string>
    <string name="to_be_implemented">To be implemented</string>
    <string name="submit">Submit</string>
    <string name="retry">Retry</string>
    <string name="undo">Undo</string>
    <string name="confirmBtnText">Confirm</string>
    <string name="backBtnText">Back</string>
    <string name="enter_the_password_line">Type 123</string>
    <string name="enter_the_word">Enter the word</string>
    <string name="add">add</string>
    <string name="back_to_quiz">Back to quiz</string>
    <string name="guess_the_word">Guess the word</string>
    <string name="get_new_word">Get new word</string>
    <string name="check">Check</string>
    <string name="word_quiz">Word Quiz</string>
    <string name="get_new_quiz">Get new quiz!</string>
</resources>
