<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SettingsFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@color/backgroundColor">

       <EditText
           android:id="@+id/editText"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:ems="12"
           android:textColorHint="@android:color/white"
           android:textColor="@android:color/white"
           android:inputType="textPersonName"
           android:gravity="center_horizontal"
           android:textSize="22sp"
           android:hint="@string/enter_the_word"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_marginTop="50dp"/>

       <Button
           android:id="@+id/addTheWord"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/editText"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_marginTop="12dp"
           android:textColor="@android:color/white"
           android:background="@color/backgroundColorCard"

           android:text="@string/add"
           />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".6"
            android:layout_marginHorizontal="2dp"
            android:background="@color/backgroundCardView"
            app:layout_constraintBottom_toTopOf="@id/backToGridBtn">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/wordsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardview_dark_background"
                tools:listitem="@layout/list_item"></androidx.recyclerview.widget.RecyclerView>
        </androidx.cardview.widget.CardView>

       <Button
           android:id="@+id/backToGridBtn"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/back_to_quiz"
           android:textColor="@android:color/white"
           android:background="@color/backgroundColorCard"
           app:layout_constraintBottom_toBottomOf="parent"/>


   </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>