<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.QuizFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/backgroundColor">


        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/backgroundCardView"
            android:text="@string/word_quiz"
            android:textStyle="italic|bold"
            android:textSize="42sp"
            android:layout_marginTop="80dp"
            android:layout_marginHorizontal="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/shuffleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:paddingHorizontal="12dp"
            android:textColor="@android:color/white"
            android:background="@color/backgroundColorCard"
            android:text="@string/get_new_quiz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appTitle"
            app:layout_constraintBottom_toTopOf="@id/answerField"/>

        <EditText
            android:id="@+id/answerField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="16"
            android:enabled="false"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/guess_the_word"
            android:inputType="none"
            app:layout_constraintEnd_toStartOf="@id/undoBtn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@id/submitButton"/>

        <Button
            android:id="@+id/submitButton"
            android:background="@color/backgroundColorCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/check"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/mGrid" />


        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/mGrid"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.35"
            android:layout_marginHorizontal="3dp"
            app:columnCount="4"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/answerField"
            app:rowCount="4">

        </androidx.gridlayout.widget.GridLayout>

        <ImageButton
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:src="@drawable/ic_refresh_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <ImageButton
            android:id="@+id/hintButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:src="@drawable/ic_help_black_24dp"
            app:layout_constraintEnd_toStartOf="@id/retryButton"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageButton
            android:id="@+id/undoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_undo_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/answerField"
            tools:layout_editor_absoluteY="174dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>